# agent-matcha

./: .gitignore  README.md  components.json  package-lock.json  package.json
.github/workflows/: deploy-voice-agent.yml
convex/: convex.config.ts  crons.ts  http.ts  schema.ts  settings.ts
convex/_generated/: api.d.ts
convex/actionQueue/: actions.ts  cron.ts  mutations.ts  notify.ts  queries.ts  sandboxMutations.ts  seed.ts  seedPublic.ts
convex/agents/: config.ts  flowBridge.ts  introFacilitator.ts  matchFeedback.ts  matchaAgent.ts  threads.ts  tools.ts
convex/analytics/: aggregations.ts  instrumentLlm.ts  pricingSync.ts  pricingSyncAction.ts  queries.ts  tokenTracking.ts
convex/auth/: admins.ts  auth.ts  authz.ts
convex/conversations/: mutations.ts  queries.ts
convex/crons/: followUps.ts  reminders.ts  sync.ts
convex/dataRequests/: actions.ts  (+5 more)
docs/: SCAFFOLDING.md  client-notes-dani-call.md  feedback-tree-analysis.md  logging-audit-prd-5.3.md  sma-api-reference.md  smartmatchapp-integration.md  voice-agent-system-prompt.md  voice-providers-research.md  whatsapp-templates.md
elevenlabs-agent/: README.md  package.json  server.js  tools.json
src/: middleware.ts
voice-agent/: .dockerignore  .env.example  Dockerfile  README.md  VOICE_AGENT_RESEARCH_BRIEF.md  agent.py  call_handler.py  convex_client.py  livekit.toml  persona.py  pyproject.toml  sip_config.py  tools.py
voice-agent-pipecat/: local_bot.py  matcha_agent.py  persona.py  requirements.txt  services.py  tools.py
voice-agent/flows/: intake.py
voice-agent/tests/: test_persona_fields.py
(+199 files in other folders)
